[gd_scene load_steps=20 format=3 uid="uid://d2ho8kuoruta4"]

[ext_resource type="Script" path="res://scripts/level.gd" id="1_5qxnk"]
[ext_resource type="Texture2D" uid="uid://c4kj7s7kyblt6" path="res://assets/sprites/tilesets/tilesheet_complete.png" id="1_bh5e7"]
[ext_resource type="Texture2D" uid="uid://bhqrwexqi3nvm" path="res://assets/images/bg/bg.png" id="2_h3ycm"]
[ext_resource type="Script" path="res://scripts/level_2D.gd" id="2_outvc"]
[ext_resource type="PackedScene" uid="uid://dxl6tt2rnhma2" path="res://scenes/player_2d.tscn" id="3_jtq48"]
[ext_resource type="PackedScene" uid="uid://c5k087o678i4s" path="res://scenes/table_2d.tscn" id="5_1kj1l"]
[ext_resource type="Theme" uid="uid://cdydlki1v17ye" path="res://resources/default.tres" id="5_t5282"]
[ext_resource type="Script" path="res://scripts/timer.gd" id="6_alsso"]
[ext_resource type="Texture2D" uid="uid://cx4l5waf4bpjt" path="res://assets/sprites/GUI/Menu/panel_beigeLight.png" id="7_mvpv3"]
[ext_resource type="PackedScene" uid="uid://djcjjkrp8bhhf" path="res://scenes/wall_3d.tscn" id="9_a21v6"]
[ext_resource type="PackedScene" uid="uid://b0hvhrwmwpmrm" path="res://scenes/table_3d.tscn" id="9_loyar"]
[ext_resource type="PackedScene" uid="uid://cn3rque38nr2k" path="res://assets/models/doorway.glb" id="10_7f37i"]
[ext_resource type="PackedScene" uid="uid://b8gx2eys1smxs" path="res://scenes/player_3d.tscn" id="11_evgxh"]
[ext_resource type="Script" path="res://scripts/teste.gd" id="12_a4udp"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_ownff"]
texture = ExtResource("1_bh5e7")
texture_region_size = Vector2i(64, 64)
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
10:0/0 = 0
11:0/0 = 0
12:0/0 = 0
13:0/0 = 0
14:0/0 = 0
15:0/0 = 0
16:0/0 = 0
17:0/0 = 0
18:0/0 = 0
19:0/0 = 0
20:0/0 = 0
21:0/0 = 0
22:0/0 = 0
23:0/0 = 0
24:0/0 = 0
25:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
10:1/0 = 0
11:1/0 = 0
12:1/0 = 0
13:1/0 = 0
14:1/0 = 0
15:1/0 = 0
16:1/0 = 0
17:1/0 = 0
18:1/0 = 0
19:1/0 = 0
20:1/0 = 0
21:1/0 = 0
22:1/0 = 0
23:1/0 = 0
24:1/0 = 0
25:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
9:2/0 = 0
10:2/0 = 0
11:2/0 = 0
12:2/0 = 0
13:2/0 = 0
14:2/0 = 0
15:2/0 = 0
16:2/0 = 0
17:2/0 = 0
18:2/0 = 0
19:2/0 = 0
20:2/0 = 0
21:2/0 = 0
22:2/0 = 0
23:2/0 = 0
24:2/0 = 0
25:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
8:3/0 = 0
9:3/0 = 0
10:3/0 = 0
11:3/0 = 0
12:3/0 = 0
13:3/0 = 0
14:3/0 = 0
15:3/0 = 0
16:3/0 = 0
17:3/0 = 0
18:3/0 = 0
19:3/0 = 0
20:3/0 = 0
21:3/0 = 0
22:3/0 = 0
23:3/0 = 0
24:3/0 = 0
25:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
9:4/0 = 0
10:4/0 = 0
11:4/0 = 0
12:4/0 = 0
13:4/0 = 0
14:4/0 = 0
15:4/0 = 0
16:4/0 = 0
17:4/0 = 0
18:4/0 = 0
19:4/0 = 0
20:4/0 = 0
21:4/0 = 0
22:4/0 = 0
23:4/0 = 0
24:4/0 = 0
25:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
8:5/0 = 0
9:5/0 = 0
10:5/0 = 0
11:5/0 = 0
12:5/0 = 0
13:5/0 = 0
14:5/0 = 0
15:5/0 = 0
16:5/0 = 0
17:5/0 = 0
18:5/0 = 0
19:5/0 = 0
20:5/0 = 0
21:5/0 = 0
22:5/0 = 0
23:5/0 = 0
24:5/0 = 0
25:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
8:6/0 = 0
9:6/0 = 0
10:6/0 = 0
11:6/0 = 0
12:6/0 = 0
13:6/0 = 0
14:6/0 = 0
15:6/0 = 0
16:6/0 = 0
17:6/0 = 0
18:6/0 = 0
19:6/0 = 0
20:6/0 = 0
21:6/0 = 0
22:6/0 = 0
23:6/0 = 0
24:6/0 = 0
25:6/0 = 0
0:7/0 = 0
1:7/0 = 0
2:7/0 = 0
3:7/0 = 0
4:7/0 = 0
5:7/0 = 0
6:7/0 = 0
7:7/0 = 0
8:7/0 = 0
9:7/0 = 0
10:7/0 = 0
11:7/0 = 0
12:7/0 = 0
13:7/0 = 0
14:7/0 = 0
15:7/0 = 0
16:7/0 = 0
17:7/0 = 0
18:7/0 = 0
19:7/0 = 0
20:7/0 = 0
21:7/0 = 0
22:7/0 = 0
23:7/0 = 0
24:7/0 = 0
25:7/0 = 0
0:8/0 = 0
1:8/0 = 0
2:8/0 = 0
3:8/0 = 0
4:8/0 = 0
5:8/0 = 0
6:8/0 = 0
7:8/0 = 0
8:8/0 = 0
9:8/0 = 0
10:8/0 = 0
11:8/0 = 0
12:8/0 = 0
13:8/0 = 0
14:8/0 = 0
15:8/0 = 0
16:8/0 = 0
17:8/0 = 0
18:8/0 = 0
19:8/0 = 0
20:8/0 = 0
21:8/0 = 0
22:8/0 = 0
23:8/0 = 0
24:8/0 = 0
25:8/0 = 0
26:8/0 = 0
0:9/0 = 0
1:9/0 = 0
2:9/0 = 0
3:9/0 = 0
4:9/0 = 0
5:9/0 = 0
6:9/0 = 0
7:9/0 = 0
8:9/0 = 0
9:9/0 = 0
10:9/0 = 0
11:9/0 = 0
12:9/0 = 0
13:9/0 = 0
14:9/0 = 0
15:9/0 = 0
16:9/0 = 0
17:9/0 = 0
18:9/0 = 0
19:9/0 = 0
20:9/0 = 0
21:9/0 = 0
22:9/0 = 0
23:9/0 = 0
24:9/0 = 0
25:9/0 = 0
26:9/0 = 0
0:10/0 = 0
1:10/0 = 0
2:10/0 = 0
3:10/0 = 0
4:10/0 = 0
5:10/0 = 0
6:10/0 = 0
7:10/0 = 0
8:10/0 = 0
9:10/0 = 0
10:10/0 = 0
11:10/0 = 0
12:10/0 = 0
13:10/0 = 0
14:10/0 = 0
15:10/0 = 0
16:10/0 = 0
17:10/0 = 0
18:10/0 = 0
19:10/0 = 0
20:10/0 = 0
21:10/0 = 0
22:10/0 = 0
23:10/0 = 0
24:10/0 = 0
25:10/0 = 0
26:10/0 = 0
0:11/0 = 0
1:11/0 = 0
2:11/0 = 0
3:11/0 = 0
4:11/0 = 0
5:11/0 = 0
6:11/0 = 0
7:11/0 = 0
8:11/0 = 0
9:11/0 = 0
10:11/0 = 0
11:11/0 = 0
12:11/0 = 0
13:11/0 = 0
14:11/0 = 0
15:11/0 = 0
16:11/0 = 0
17:11/0 = 0
18:11/0 = 0
19:11/0 = 0
20:11/0 = 0
21:11/0 = 0
22:11/0 = 0
23:11/0 = 0
24:11/0 = 0
25:11/0 = 0
26:11/0 = 0
0:12/0 = 0
1:12/0 = 0
2:12/0 = 0
3:12/0 = 0
4:12/0 = 0
5:12/0 = 0
6:12/0 = 0
7:12/0 = 0
8:12/0 = 0
9:12/0 = 0
10:12/0 = 0
11:12/0 = 0
12:12/0 = 0
13:12/0 = 0
14:12/0 = 0
15:12/0 = 0
16:12/0 = 0
17:12/0 = 0
18:12/0 = 0
19:12/0 = 0
20:12/0 = 0
21:12/0 = 0
22:12/0 = 0
23:12/0 = 0
24:12/0 = 0
25:12/0 = 0
26:12/0 = 0
0:13/0 = 0
1:13/0 = 0
2:13/0 = 0
3:13/0 = 0
4:13/0 = 0
5:13/0 = 0
6:13/0 = 0
7:13/0 = 0
8:13/0 = 0
9:13/0 = 0
10:13/0 = 0
11:13/0 = 0
12:13/0 = 0
13:13/0 = 0
14:13/0 = 0
15:13/0 = 0
16:13/0 = 0
17:13/0 = 0
18:13/0 = 0
19:13/0 = 0
20:13/0 = 0
21:13/0 = 0
22:13/0 = 0
23:13/0 = 0
24:13/0 = 0
25:13/0 = 0
26:13/0 = 0
0:14/0 = 0
1:14/0 = 0
2:14/0 = 0
3:14/0 = 0
4:14/0 = 0
5:14/0 = 0
6:14/0 = 0
7:14/0 = 0
8:14/0 = 0
9:14/0 = 0
10:14/0 = 0
11:14/0 = 0
12:14/0 = 0
13:14/0 = 0
14:14/0 = 0
15:14/0 = 0
16:14/0 = 0
17:14/0 = 0
18:14/0 = 0
19:14/0 = 0
20:14/0 = 0
21:14/0 = 0
22:14/0 = 0
23:14/0 = 0
24:14/0 = 0
25:14/0 = 0
26:14/0 = 0
0:15/0 = 0
1:15/0 = 0
2:15/0 = 0
3:15/0 = 0
4:15/0 = 0
5:15/0 = 0
6:15/0 = 0
7:15/0 = 0
8:15/0 = 0
9:15/0 = 0
10:15/0 = 0
11:15/0 = 0
12:15/0 = 0
13:15/0 = 0
14:15/0 = 0
15:15/0 = 0
16:15/0 = 0
17:15/0 = 0
18:15/0 = 0
19:15/0 = 0
20:15/0 = 0
21:15/0 = 0
22:15/0 = 0
23:15/0 = 0
24:15/0 = 0
25:15/0 = 0
26:15/0 = 0
0:16/0 = 0
1:16/0 = 0
2:16/0 = 0
3:16/0 = 0
4:16/0 = 0
5:16/0 = 0
6:16/0 = 0
7:16/0 = 0
8:16/0 = 0
9:16/0 = 0
10:16/0 = 0
11:16/0 = 0
12:16/0 = 0
13:16/0 = 0
14:16/0 = 0
15:16/0 = 0
16:16/0 = 0
17:16/0 = 0
18:16/0 = 0
19:16/0 = 0
20:16/0 = 0
21:16/0 = 0
22:16/0 = 0
23:16/0 = 0
24:16/0 = 0
0:17/0 = 0
1:17/0 = 0
2:17/0 = 0
3:17/0 = 0
4:17/0 = 0
5:17/0 = 0
6:17/0 = 0
7:17/0 = 0
8:17/0 = 0
9:17/0 = 0
10:17/0 = 0
11:17/0 = 0
12:17/0 = 0
13:17/0 = 0
14:17/0 = 0
15:17/0 = 0
16:17/0 = 0
17:17/0 = 0
18:17/0 = 0
19:17/0 = 0
20:17/0 = 0
21:17/0 = 0
22:17/0 = 0
23:17/0 = 0
24:17/0 = 0
0:18/0 = 0
1:18/0 = 0
2:18/0 = 0
3:18/0 = 0
4:18/0 = 0
5:18/0 = 0
6:18/0 = 0
7:18/0 = 0
8:18/0 = 0
9:18/0 = 0
10:18/0 = 0
11:18/0 = 0
12:18/0 = 0
13:18/0 = 0
14:18/0 = 0
15:18/0 = 0
16:18/0 = 0
17:18/0 = 0
18:18/0 = 0
19:18/0 = 0
20:18/0 = 0
21:18/0 = 0
22:18/0 = 0
23:18/0 = 0
24:18/0 = 0
0:19/0 = 0
1:19/0 = 0
2:19/0 = 0
3:19/0 = 0
4:19/0 = 0
5:19/0 = 0
6:19/0 = 0
7:19/0 = 0
8:19/0 = 0
9:19/0 = 0
10:19/0 = 0
11:19/0 = 0
12:19/0 = 0
13:19/0 = 0
14:19/0 = 0
15:19/0 = 0
16:19/0 = 0
17:19/0 = 0
18:19/0 = 0
19:19/0 = 0
20:19/0 = 0
21:19/0 = 0
22:19/0 = 0
23:19/0 = 0
24:19/0 = 0

[sub_resource type="TileSet" id="TileSet_gp14p"]
tile_size = Vector2i(64, 64)
sources/0 = SubResource("TileSetAtlasSource_ownff")

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_2xmiu"]
sky_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)
ground_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)

[sub_resource type="Sky" id="Sky_bcjkq"]
sky_material = SubResource("ProceduralSkyMaterial_2xmiu")

[sub_resource type="Environment" id="Environment_un4ch"]
background_mode = 2
sky = SubResource("Sky_bcjkq")
tonemap_mode = 2

[node name="Level" type="Node2D"]
script = ExtResource("1_5qxnk")

[node name="Level_2D" type="Node2D" parent="."]
script = ExtResource("2_outvc")

[node name="TextureRect" type="TextureRect" parent="Level_2D"]
modulate = Color(1, 1, 1, 0.513726)
custom_minimum_size = Vector2(1920, 1080)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 1920.0
offset_bottom = 1080.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_h3ycm")

[node name="TileMap" type="TileMap" parent="Level_2D"]
tile_set = SubResource("TileSet_gp14p")
cell_quadrant_size = 64
format = 2
layer_0/tile_data = PackedInt32Array(131081, 589824, 4, 196617, 720896, 5, 262153, 720896, 5, 327689, 720896, 5, 393225, 720896, 5, 458761, 720896, 5, 524297, 720896, 5, 589833, 720896, 5, 655369, 720896, 5, 720905, 720896, 5, 786441, 720896, 5, 851977, 589824, 5, 131082, 720896, 4, 851978, 720896, 4, 131083, 720896, 4, 851979, 720896, 4, 131084, 720896, 4, 851980, 720896, 4, 131085, 720896, 4, 851981, 720896, 4, 131086, 720896, 4, 851982, 720896, 4, 131087, 720896, 4, 851983, 720896, 4, 131088, 720896, 4, 851984, 720896, 4, 131089, 720896, 4, 851985, 720896, 4, 131090, 720896, 4, 851986, 720896, 4, 131091, 720896, 4, 851987, 720896, 4, 131092, 655360, 4, 196628, 720896, 5, 262164, 720896, 5, 327700, 720896, 5, 393236, 720896, 5, 458772, 720896, 5, 524308, 720896, 5, 589844, 720896, 5, 655380, 720896, 5, 720916, 720896, 5, 786452, 720896, 5, 851988, 655360, 5)

[node name="Wall" type="StaticBody2D" parent="Level_2D/TileMap"]
position = Vector2(5.49493, -3.75308)
collision_mask = 3

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Level_2D/TileMap/Wall"]
position = Vector2(64.6456, -60.5981)
polygon = PackedVector2Array(512, 194, 1279, 194, 1279.4, 345.906, 1281, 962, 513, 961, 513, 212, 575, 256, 575, 897, 1218, 897, 1217, 256, 578, 257)

[node name="Table2D" parent="Level_2D" instance=ExtResource("5_1kj1l")]
position = Vector2(672, 223)

[node name="Player2D" parent="Level_2D" instance=ExtResource("3_jtq48")]
position = Vector2(960, 464)

[node name="Camera2D" type="Camera2D" parent="Level_2D"]
position = Vector2(960.58, 539.62)
scale = Vector2(0.789978, 0.600585)

[node name="Level_3D" type="Node3D" parent="."]

[node name="WorldEnvironment" type="WorldEnvironment" parent="Level_3D"]
environment = SubResource("Environment_un4ch")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="Level_3D"]
transform = Transform3D(-0.866023, -0.433016, 0.250001, 0, 0.499998, 0.866027, -0.500003, 0.749999, -0.43301, 0, 0, 0)
shadow_enabled = true

[node name="Table3D" parent="Level_3D" instance=ExtResource("9_loyar")]

[node name="Player3D" parent="Level_3D" instance=ExtResource("11_evgxh")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 4.37946, 0.944214, 4.55066)

[node name="Wall3D" parent="Level_3D" instance=ExtResource("9_a21v6")]
transform = Transform3D(10, 0, 0, 0, 1, 0, 0, 0, 1, 4.5, 1.5, -0.65)

[node name="Wall3D2" parent="Level_3D" instance=ExtResource("9_a21v6")]
transform = Transform3D(10, 0, 0, 0, 1, 0, 0, 0, 1, 4.5, 1.5, 9.5)

[node name="doorway" parent="Level_3D/Wall3D2" instance=ExtResource("10_7f37i")]
transform = Transform3D(0.21, 0, 0, 0, 2.1, 0, 0, 0, 2.1, -0.102559, -1.5, -0.0599546)

[node name="Wall3D3" parent="Level_3D" instance=ExtResource("9_a21v6")]
transform = Transform3D(-4.37114e-07, 0, -1, 0, 1, 0, 10, 0, -4.37114e-08, 9.575, 1.5, 4.425)

[node name="Wall3D4" parent="Level_3D" instance=ExtResource("9_a21v6")]
transform = Transform3D(-4.37114e-07, 0, -1, 0, 1, 0, 10, 0, -4.37114e-08, -0.575, 1.5, 4.425)

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 48
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 48
theme_override_constants/margin_bottom = 16

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0

[node name="Label" type="Label" parent="CanvasLayer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0
theme = ExtResource("5_t5282")
text = "Time"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label2" type="Label" parent="CanvasLayer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0
theme = ExtResource("5_t5282")
theme_override_font_sizes/font_size = 36
text = "00:00"
horizontal_alignment = 1
vertical_alignment = 1
script = ExtResource("6_alsso")

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/MarginContainer"]
custom_minimum_size = Vector2(480, 800)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
texture = ExtResource("7_mvpv3")
expand_mode = 1

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/MarginContainer/TextureRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_top = 36
theme_override_constants/margin_bottom = 36

[node name="Todo" type="Label" parent="CanvasLayer/MarginContainer/TextureRect/MarginContainer"]
modulate = Color(0, 0, 0, 1)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme = ExtResource("5_t5282")
theme_override_font_sizes/font_size = 36
text = "TO-DO`s"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TaskList" type="VBoxContainer" parent="CanvasLayer/MarginContainer/TextureRect/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 48
alignment = 1

[node name="Label" type="Label" parent="CanvasLayer/MarginContainer"]
layout_mode = 2
size_flags_vertical = 8
theme = ExtResource("5_t5282")
text = "Time"
horizontal_alignment = 1
vertical_alignment = 1
script = ExtResource("12_a4udp")
